# vscode-secret-service-rs

./: Cargo.toml
.devcontainer/: devcontainer.json
examples/: example.rs
src/: error.rs  session.rs  ss_crypto.rs  util.rs
