[package]
authors = ["Walther Chen <walther.chen@gmail.com>"]
description = "Library to interface with Secret Service API"
documentation = "https://docs.rs/secret-service"
homepage = "https://github.com/hwchen/secret-service-rs.git"
keywords = ["secret-service", "password", "linux", "keychain"]
license = "MIT OR Apache-2.0"
name = "secret-service"
repository = "https://github.com/hwchen/secret-service-rs.git"
edition = "2018"
version = "2.0.2"

[dependencies]
lazy_static = "1.4.0"
num = "0.4.0"
rand = "0.8.1"
serde = { version = "1.0.118", features = ["derive"] }
zbus = "1.9.2"
zbus_macros = "1.7.0"
zvariant = "2.4.0"
zvariant_derive = "2.4.0"
openssl = { version = "^0.10.40" }
